# scplot

./: .gitignore  README.md  plots_list.md  principles.md  pyproject.toml
cellestial/: __init__.py
cellestial/decorators/: __init__.py  util.py
cellestial/single/core/: __init__.py  dimensional.py  scatterplot.py
cellestial/themes/: __init__.py  _scatters.py
notebooks/: elbow.ipynb  pbm3k.ipynb  scatter.html  scatter.ipynb  viloin.ipynb
plots/: test_dim_umap.html  test_dim_umap_arrow.html  test_dim_umap_axis.html  test_dim_umap_none.html  test_expression.html
test/: defaults.py
