[project]
name = "scplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.10.9",
    "lets-plot>=4.5.1",
    "polars>=1.12.0",
    "pooch>=1.8.2",
    "pyarrow>=18.0.0",
    "scanpy[leiden]>=1.10.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.7.2",
]


[tool.ruff]
line-length = 99